--- a/src/app/pages/content-management/report-list/report-detail/detail-report/detail-report.component.html
+++ b/src/app/pages/content-management/report-list/report-detail/detail-report/detail-report.component.html
@@ -11,7 +11,7 @@
           </div>
         </div>
       </div>
-      <div fxFlex="15" fxLayoutAlign="center">
+      <div fxFlex="20" fxLayoutAlign="flex-end">
         <div class="box-detail-status-red">
           Status Non Aktif
         </div>
@@ -35,6 +35,58 @@
           </tbody>
         </table>
       </div>
+    </div>
+    <form [formGroup]="formPromo">
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="45" class="is-light">
+          <input matInput placeholder="Pengguna" type="text" formControlName="user">
+        </mat-form-field>
+      </div>
+
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="45" class="is-light">
+          <input matInput placeholder="Tipe Promosi" type="text" formControlName="promotionType">
+        </mat-form-field>
+      </div>
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="45" class="is-light">
+          <input matInput placeholder="Judul" type="text" formControlName="title">
+        </mat-form-field>
+      </div>
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="45" class="is-light">
+          <input matInput placeholder="Penjelasan Singkat" type="text" formControlName="description">
+        </mat-form-field>
+      </div>
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="45" class="is-light">
+          <input matInput placeholder="Detail Promosi" type="text" formControlName="promotionDetail">
+        </mat-form-field>
+      </div>
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="45%" class="is-light">
+          <input matInput [matDatepicker]="createdPicker" placeholder="Tanggal Promosi dibuat"
+            formControlName="promoCreatedDate">
+          <mat-datepicker-toggle matSuffix [for]="createdPicker"></mat-datepicker-toggle>
+          <mat-datepicker #createdPicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
+        <mat-form-field fxFlex="45%" class="is-light">
+          <input matInput [matDatepicker]="expiredPicker" placeholder="Tanggal Promosi berakhir"
+            formControlName="promoExpiredDate">
+          <mat-datepicker-toggle matSuffix [for]="expiredPicker"></mat-datepicker-toggle>
+          <mat-datepicker #expiredPicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+    </form>
+    <div fxLayout="row">
+      <button mat-raised-button type="button" class="confirmation-button" fxFlex="20">
+        HAPUS
+      </button>
+      <button mat-raised-button type="button" class="confirmation-button" fxFlex="20">
+        SIMPAN
+      </button>
     </div>
   </div>
 </div>
