--- a/src/app/pages/dte/automation/edit/audience-trade-program-edit.component.html
+++ b/src/app/pages/dte/automation/edit/audience-trade-program-edit.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="isDetail ? 'Detail DTE Automation': 'Ubah DTE Automation'">
+  <page-content-header [contentTitle]="onDetail ? 'Detail DTE Automation': 'Ubah DTE Automation'">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
