fix Tipe Promosi - Detail Daftar Laporan

--- a/src/app/pages/content-management/report-list/report-detail/detail-report/detail-report.component.html
+++ b/src/app/pages/content-management/report-list/report-detail/detail-report/detail-report.component.html
@@ -54,7 +54,8 @@
 
         <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
           <mat-form-field fxFlex="100" class="is-light">
-            <input matInput placeholder="Tipe Promosi" type="text" formControlName="promotionType">
+            <input matInput placeholder="Tipe Promosi" type="text" formControlName="promotionType"
+              style="text-transform: capitalize;">
           </mat-form-field>
         </div>
         <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="40px" fxLayoutGap.lt-md="0px">
