--- a/src/app/pages/content-management/report-list/report-history/report-history.component.html
+++ b/src/app/pages/content-management/report-list/report-history/report-history.component.html
@@ -37,7 +37,7 @@
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column [width]="100" name="Status" prop="active_status">
+      <!-- <ngx-datatable-column [width]="100" name="Status" prop="active_status">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           <div class="name-container">
             <p class="status text-truncate h6 p-4"
@@ -47,7 +47,7 @@
             </p>
           </div>
         </ng-template>
-      </ngx-datatable-column>
+      </ngx-datatable-column> -->
 
       <ngx-datatable-column name="Kode Toko" prop="business_code">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
@@ -55,9 +55,9 @@
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Pengguna" prop="banner.user_group">
+      <ngx-datatable-column name="Pengguna" prop="banner.pembuat">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          <p class="text-capital">{{row.banner.user_group}}</p>
+          <p class="text-capital">{{row.banner.pembuat}}</p>
         </ng-template>
       </ngx-datatable-column>
 
