remove status in detail report - REPORT LIST

--- a/src/app/pages/content-management/report-list/report-detail/detail-report/detail-report.component.html
+++ b/src/app/pages/content-management/report-list/report-detail/detail-report/detail-report.component.html
@@ -14,14 +14,14 @@
           </div>
         </div>
       </div>
-      <div fxFlex="20" fxLayoutAlign="flex-end">
+      <!-- <div fxFlex="20" fxLayoutAlign="flex-end">
         <div *ngIf="detailReport.banner.status != 'publish'" class="box-detail-status-red">
           Status Non Aktif
         </div>
         <div *ngIf="detailReport.banner.status == 'publish'" class="box-detail-status-green">
           Status Aktif
         </div>
-      </div>
+      </div> -->
     </div>
     <div fxLayout="row wrap" style="margin-top: 50px;">
       <div fxFlex="40">
