--- a/src/@fuse/components/navigation/horizontal/nav-item/nav-horizontal-item.component.html
+++ b/src/@fuse/components/navigation/horizontal/nav-item/nav-horizontal-item.component.html
@@ -2,7 +2,7 @@
 
     <!-- item.url -->
     <a class="nav-link" *ngIf="item.url" [routerLink]="[item.url]" routerLinkActive="active"
-       [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
+        [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
         <ng-container *ngTemplateOutlet="itemContent"></ng-container>
     </a>
 
@@ -12,9 +12,8 @@
     </span>
 
     <!-- item.url && item.function -->
-    <a class="nav-link" *ngIf="item.url && item.function" (click)="item.function()"
-       [routerLink]="[item.url]" routerLinkActive="active"
-       [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
+    <a class="nav-link" *ngIf="item.url && item.function" (click)="item.function()" [routerLink]="[item.url]"
+        routerLinkActive="active" [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
         <ng-container *ngTemplateOutlet="itemContent"></ng-container>
     </a>
 
@@ -22,8 +21,11 @@
         <mat-icon class="nav-link-icon" *ngIf="item.icon">{{item.icon}}</mat-icon>
         <span class="nav-link-title" [translate]="item.translate">{{item.title}}</span>
         <span class="nav-link-badge" *ngIf="item.badge" [translate]="item.badge.translate"
-              [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
+            [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
             {{item.badge.title}}
+        </span>
+        <span class="nav-link-badge" *ngIf="item.count">
+            {{ item.count }}
         </span>
     </ng-template>
 
