--- a/src/@fuse/components/navigation/vertical/nav-item/nav-vertical-item.component.html
+++ b/src/@fuse/components/navigation/vertical/nav-item/nav-vertical-item.component.html
@@ -1,9 +1,8 @@
 <ng-container *ngIf="!item.hidden">
 
     <!-- item.url -->
-    <a class="nav-link" *ngIf="item.url && !item.function"
-       [routerLink]="[item.url]" routerLinkActive="active"
-       [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
+    <a class="nav-link" *ngIf="item.url && !item.function" [routerLink]="[item.url]" routerLinkActive="active"
+        [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
         <ng-container *ngTemplateOutlet="itemContent"></ng-container>
     </a>
 
@@ -13,9 +12,8 @@
     </span>
 
     <!-- item.url && item.function -->
-    <a class="nav-link" *ngIf="item.url && item.function" (click)="item.function()"
-       [routerLink]="[item.url]" routerLinkActive="active"
-       [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
+    <a class="nav-link" *ngIf="item.url && item.function" (click)="item.function()" [routerLink]="[item.url]"
+        routerLinkActive="active" [routerLinkActiveOptions]="{exact: item.exactMatch || false}" matRipple>
         <ng-container *ngTemplateOutlet="itemContent"></ng-container>
     </a>
 
@@ -23,8 +21,11 @@
         <mat-icon class="nav-link-icon" *ngIf="item.icon">{{item.icon}}</mat-icon>
         <span class="nav-link-title" [translate]="item.translate">{{item.title}}</span>
         <span class="nav-link-badge" *ngIf="item.badge" [translate]="item.badge.translate"
-              [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
+            [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
             {{item.badge.title}}
+        </span>
+        <span class="nav-link-badge" *ngIf="item.count">
+            {{ item.count }}
         </span>
     </ng-template>
 
