change badge color on nav-link-badge - REPORT LIST

--- a/src/@fuse/components/navigation/vertical/nav-item/nav-vertical-item.component.scss
+++ b/src/@fuse/components/navigation/vertical/nav-item/nav-vertical-item.component.scss
@@ -11,4 +11,11 @@
             }
         }
     }
+
+    .nav-link {
+        > .nav-link-badge{
+            background-color: #fff;
+            color: #000;
+        }
+    }
 }
