--- a/src/app/pages/content-management/report-list/report-index/report-list-index.component.html
+++ b/src/app/pages/content-management/report-list/report-index/report-list-index.component.html
@@ -15,7 +15,7 @@
       [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)"
       (select)="onSelect($event)">
 
-      <ngx-datatable-column>
+      <ngx-datatable-column [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           <div class="name-container pl-8 pt-8 pb-8 pr-0">
             <img class="banner-image" *ngIf="row.banner.image_url" [src]="row.banner.image_url">
@@ -25,13 +25,13 @@
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Nama Promo" prop="image_url">
+      <ngx-datatable-column name="Nama Promo" prop="image_url" [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           <span class="row-name" (click)="directDetail(row)">{{ row.banner.name }}</span>
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Total Laporan" prop="report_users_count">
+      <ngx-datatable-column name="Total Laporan" prop="report_users_count" [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           {{row.report_users_count}}
         </ng-template>
@@ -49,25 +49,25 @@
         </ng-template>
       </ngx-datatable-column> -->
 
-      <ngx-datatable-column name="Kode Toko" prop="business_code">
+      <ngx-datatable-column name="Kode Toko" prop="business_code" [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           {{row.banner.business_code}}
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Pengguna" prop="banner.pembuat">
+      <ngx-datatable-column name="Pengguna" prop="banner.pembuat" [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           <span class="text-capital">{{row.banner.pembuat}}</span>
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Tanggal Akhir Promo" prop="expiredDate">
+      <ngx-datatable-column name="Tanggal Akhir Promo" prop="expiredDate" [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           {{row.banner.to | date:'dd/MM/yyyy'}}
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Action" prop="action">
+      <ngx-datatable-column name="Action" prop="action" [sortable]="false">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           <div fxLayout="column" style="padding: 10px 10px 10px 0;">
             <button mat-button
